--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "author": "Alexey Karpetov",
   "repository": "https://github.com/f3ath/changelog-ts",
   "license": "MIT",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "main": "dist/index",
   "typings": "dist/index",
   "dependencies": {
@@ -22,5 +22,7 @@
     "test": "jasmine-ts test/**/*.spec.ts",
     "prepublish": "npm run build"
   },
-  "files": ["dist"]
+  "files": [
+    "dist"
+  ]
 }
