--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   "main": "dist/index",
   "typings": "dist/index",
   "dependencies": {
-    "marked-ts": "^1.0.0-beta.4"
+    "marked-ts": "^1.0.0-beta.4",
+    "semver": "^5.5.1"
   },
   "devDependencies": {
     "typescript": "^3.0.3",
