--- a/package.json
+++ b/package.json
@@ -4,11 +4,12 @@
   "author": "Alexey Karpetov",
   "repository": "https://github.com/f3ath/changelog-ts",
   "license": "MIT",
-  "version": "0.0.3",
+  "version": "0.0.4",
   "main": "dist/index",
   "typings": "dist/index",
   "dependencies": {
-    "marked-ts": "^1.0.0-beta.4"
+    "marked-ts": "^1.0.0-beta.4",
+    "semver": "^5.5.1"
   },
   "devDependencies": {
     "typescript": "^3.0.3",
